--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!-- Despide al participante -->
     <div class="out">
         <img src="logo.gif" alt="HPC">
-        <h3>Estimado/a <span id="apellido"></span><span id="nombre"></span></h3>
+        <h3>Estimado/a <span id="apellido"></span> <span id="nombre"></span></h3>
         <h3>Gracias por participar!</h3>
         <h5>Sus respuestas se guardaron correctamente</h5>
     </div>
@@ -51,7 +51,7 @@
     <form class="cuestionario">
         <div>
             <div class="header">
-                <img src="/logo.gif">
+                <img src="logo.gif">
                 <span id="puntaje"></span>
             </div>
             <br>
